# TNBC-SPATIAL-CHROMATIN-COMPACTION

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: const.py  params.py
flim_analysis/distribution_classification/: binary_classifier_trainer.py  figure_customizer.py  treatment_classification_patch_wise.py  treatment_classification_tissue_wise.py  treatment_classification_tissue_wise_area.py  treatment_classification_tissue_wise_eccentricity.py
flim_analysis/feature_extraction/: create_distribution_and_median.py  extract_feature_full_tissue_main.py  extract_features.py  extract_features_patches_main.py
flim_analysis/preprocessing/: processing.py  processing_main.py  segmentation.py  segmentation_main.py
flim_analysis/resection analysis/: core_resection_analysis.ipynb
flim_analysis/resection_analysis/: core_resection_analysis.ipynb
flim_analysis/spatial_analysis/: spatial_func.py  spatial_information.ipynb
notebooks/: corr_examples_lifetime_spatial_relationship_nuclei_wise.ipynb  create_distribution.ipynb  create_sub_features_df.ipynb  exploratory_data_analysis.ipynb  extract_feature_validation.ipynb  lifetime_spatial_relationships.ipynb  segmentation_results_validation.ipynb
sbatch/: sbatch_build_distribution_patch.sh  sbatch_build_lifetime_distribution.sh  sbatch_build_lifetime_distribution_median.sh  sbatch_extract_feature_full_tissue.sh  sbatch_extract_feature_patches.sh  sbatch_extract_features.sh  sbatch_gpu_segmentation.sh
sbatch/sbatch_gnn/: sbatch_local_build_graphs.sh  (+9 more)
utils/: auxiliary_func.py  data_func.py  plots_func.py
(+42 files in other folders)
