[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tnbc-flim"            # distribution name used by pip
version = "0.1.0"
description = "TNBC FLIM tools"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Your Name"}]
dependencies = [

]


[project.optional-dependencies]


[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "flim_analysis*", "utils*"]
